tests/NormalTests/paczka1/fuzzy1/92432265.err
Error in line 12: YcwWqn7GY A290 4,4
Error in line 14: hQMEQSuFVC S2 3,6
Error in line 27: Gy9pS14M S192 15,7
Error in line 28: Gy9pS14M S2 27,9
Error in line 7: YcwWqn7GY A290 19,0
